[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/meme_spit2.png" type="Texture" id=1]
[ext_resource path="res://assets/meme_spit4.png" type="Texture" id=2]
[ext_resource path="res://assets/meme_spit1.png" type="Texture" id=3]
[ext_resource path="res://resources/Anton-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Main.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0.0823529, 0.00392157, 0.00392157, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/colors/font_color = Color( 0.941176, 0.929412, 0.101961, 1 )
Label/colors/font_color_shadow = Color( 0.105882, 0.00784314, 0.00784314, 0.603922 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/styles/normal = null

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 5 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="TextureRect1" type="TextureRect" parent="GridContainer"]
margin_right = 370.0
margin_bottom = 282.0
texture = ExtResource( 3 )

[node name="Label1" type="Label" parent="GridContainer/TextureRect1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -79.5
margin_right = 167.0
margin_bottom = 79.5
text = "AnimationPlayer sets Godot apart because it can animate any property"
align = 1
autowrap = true
percent_visible = -0.0169492

[node name="Button1" type="Button" parent="GridContainer/TextureRect1"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
margin_left = 374.0
margin_right = 744.0
margin_bottom = 282.0
texture = ExtResource( 1 )

[node name="Label2" type="Label" parent="GridContainer/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -134.0
margin_right = 174.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0.458824, 0.490196, 1, 1 )
text = "That's not any different from
any other engine
 I've used!"
align = 2
autowrap = true

[node name="Button2" type="Button" parent="GridContainer/TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
margin_top = 286.0
margin_right = 370.0
margin_bottom = 568.0
texture = ExtResource( 3 )

[node name="Label3" type="Label" parent="GridContainer/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -77.0
margin_right = 167.0
margin_bottom = 77.0
text = "It can even animate
 shader parameters"
align = 1
autowrap = true

[node name="Button3" type="Button" parent="GridContainer/TextureRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="TextureRect4" type="TextureRect" parent="GridContainer"]
margin_left = 374.0
margin_top = 286.0
margin_right = 744.0
margin_bottom = 568.0
texture = ExtResource( 2 )

[node name="Button4" type="Button" parent="GridContainer/TextureRect4"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[connection signal="pressed" from="GridContainer/TextureRect1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="GridContainer/TextureRect2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="GridContainer/TextureRect3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="GridContainer/TextureRect4/Button4" to="." method="_on_Button4_pressed"]
